added boiler plate files and updated dependencies